Fix:  fixing header overlap

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header {
     background-color: #fff;
     position: sticky;
     top: 0px;
+    z-index: 1;
     box-shadow: 1em 0.5em 1em #e4e9f1;
 }
 
